20000402-19:37 GMT+1 Victor Szakats <info@szelvesz.hu>

   * utils/hbtest/rt_array.prg
     % TAStr() optimization.
     ! aTail() test results separated for __HARBOUR__

   * utils/hbtest/rt_main.ch
     + Added the define HARBOUR_STRICT_CLIPPER_COMPATIBILITY

   * utils/hbtest/rt_str.prg
   * utils/hbtest/rt_array.prg
     * STRZERO() and AFILL() test result made dependent on the
       HARBOUR_STRICT_CLIPPER_COMPATIBILITY setting.

   * source/vm/arrayshb.c
     + Added CA-Cl*pper implementation specific runtime error for the 
       STRICT_COMPATIBLE branch.
     + Added Harbour specific runtime error on bad parameter.

   ; All these modifications cause the Regression Test failure to drop by 8.

20000402-18:50 GMT+1 Victor Szakats <info@szelvesz.hu>

   + source/tools/ctmisc.prg
   + source/tools/ctcolton.c
   + source/tools/ctposupp.c
   * source/tools/Makefile
   * makefile.bc
   * makefile.vc
   * utils/hbrun/exttools.prg
     + CT_COLORTON()
     + CT_CENTER()
     + CT_CSETCURS()
     + CT_CSETKEY()
     + CT_ENHANCED()
     + CT_STANDARD()
     + CT_LTOC()
     + CT_RESTGETS()
     + CT_SAVEGETS()
     + CT_SCREENMIX()
     + CT_POSUPPER()
     ; CA-Tools compatible functions added.

   * include/hbapiitm.h
   * source/rtl/pad.c
   + source/rtl/padc.c
   + source/rtl/padl.c
   + source/rtl/padr.c
   * source/vm/itemapi.c
   * source/rtl/Makefile
   * makefile.bc
   * makefile.vc
     * hb_itemPadConv() made global and moved to the Item API
     ! hb_itemPadConv() TRACE call typo.
     + Separated PAD*() calls.

   * */Makefile
     * Some corrections

20000402-16:17 GMT+1 Victor Szakats <info@szelvesz.hu>

   * */Makefile
     ! 8 spaces in rules converted to tabs.
       Just wondering why is this needed at all ?
       It's not an easy one, but please try to take care of this rule.

20000402-15:59 GMT+1 Victor Szakats <info@szelvesz.hu>

   - source/macro/macro.c
   * source/macro/Makefile
   + source/vm/macro.c
   * source/vm/Makefile
   * makefile.bc